# Helios-Engine

./: Cargo.toml  config-candle.toml  config.toml.bac
crates/llama-metal/: Cargo.toml  README.md
crates/llama-metal/examples/: chat.rs
crates/llama-metal/src/: lib.rs
src/: candle_provider.rs  llm.rs  main.rs  serve.rs
