[package]
name = "helios-engine"
version = "0.5.5"
edition = "2021"
rust-version = "1.70"
description = "A powerful and flexible Rust framework for building LLM-powered agents with tool support, both locally and online"
documentation = "https://docs.rs/helios-engine"
readme = "README.md"
homepage = "https://github.com/Ammar-Alnagar/Helios-Engine.git"
repository = "https://github.com/Ammar-Alnagar/Helios-Engine.git"
license = "Apache-2.0 OR MIT"
keywords = ["Llama_cpp", "agent", "candle", "helios-engine", "llm"]
categories = ["api-bindings", "asynchronous", "command-line-utilities"]

[lib]
name = "helios_engine"
path = "src/lib.rs"

[[bin]]
name = "helios-engine"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8.5", features = ["json", "macros"] }
base64 = "0.22"
candle-core = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
hf-hub = { version = "0.3", optional = true }
hostname = "0.4.0"
libc = { version = "0.2", optional = true }
llama-cpp-2 = { version = "0.1.122", optional = true }
md5 = "0.8.0"
tokenizers = { version = "0.20", optional = true }
regex = "1.10"
reqwest = { version = "0.12.23", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sysinfo = "0.37.1"
tempfile = "3.0"
thiserror = "2.0.16"
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
toml = "0.9.7"
tower = "0.5.1"
tower-http = { version = "0.6.4", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["serde", "v4"] }
walkdir = "2.4"

[features]
default = []
local = ["libc", "llama-cpp-2"]
candle = ["candle-core", "candle-transformers", "candle-nn", "tokenizers", "hf-hub"]
metal = ["candle", "candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
